<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ScrollViewCount">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        tools:context=".view.MovieActivity">

        <TextView
            android:id="@+id/titleMovieTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_black"
            android:text="@string/title_movie_tv"
            android:textColor="@color/zinc_900"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/nameLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:flow_verticalGap="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleMovieTv">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/name_tv"
                android:textColor="@color/zinc_900"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/inter"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/zinc_900"
                android:textColorHint="@color/zinc_500"
                android:textSize="16sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/releaseYearLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:flow_verticalGap="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameLl">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_bold"
                android:text="@string/release_year_tv"
                android:textColor="@color/zinc_900"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/releaseYearEt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/inter"
                android:inputType="numberDecimal"
                android:padding="12dp"
                android:textColor="@color/zinc_900"
                android:textColorHint="@color/zinc_500"
                android:textSize="16sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/studioLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:orientation="vertical"
            app:flow_verticalGap="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/releaseYearLl">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_bold"
                android:text="@string/studio_tv"
                android:textColor="@color/zinc_900"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/studioEt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/inter"
                android:inputType="numberDecimal"
                android:padding="12dp"
                android:textColor="@color/zinc_900"
                android:textColorHint="@color/zinc_500"
                android:textSize="16sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/durationLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:orientation="vertical"
            app:flow_verticalGap="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studioLl">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_bold"
                android:text="@string/duration_tv"
                android:textColor="@color/zinc_900"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/durationEt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/inter"
                android:inputType="numberDecimal"
                android:padding="12dp"
                android:textColor="@color/zinc_900"
                android:textColorHint="@color/zinc_500"
                android:textSize="16sp"
                tools:ignore="LabelFor" />
        </LinearLayout>


        <RadioGroup
            android:id="@+id/watchedRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/durationLl">

            <RadioButton
                android:id="@+id/watchedRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/inter_bold"
                android:text="@string/watched_rb"
                android:textColor="@color/zinc_900" />

            <RadioButton
                android:id="@+id/notWatchRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/no_watch_rb"
                android:textColor="@color/zinc_900" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/assessmentLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:orientation="vertical"
            app:flow_verticalGap="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/watchedRg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_bold"
                android:text="@string/assessment_tv"
                android:textColor="@color/zinc_900"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/assessmentEt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/inter"
                android:inputType="numberDecimal"
                android:padding="12dp"
                android:textColor="@color/zinc_900"
                android:textColorHint="@color/zinc_500"
                android:textSize="16sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <Spinner
            android:id="@+id/gendersSp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="24dp"
            android:entries="@array/genders"
            android:fontFamily="@font/inter"
            android:textColor="@color/zinc_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/assessmentLl" />

        <LinearLayout
            android:id="@+id/buttonsLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gendersSp">

            <Button
                android:id="@+id/backBt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:backgroundTint="@color/zinc_50"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/zinc_900"
                android:text="@string/back_bt"
                android:textAllCaps="false"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/saveBt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_bold"
                android:text="@string/save_bt"
                android:textAllCaps="false"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>